Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -25,7 +25,7 @@ graph LR
     C --> H[Content visible to user and search engines];
 ```
 
-However, be cautious: disabling lazy loading for too many elements can increase initial page load time. It should be used only for critical, above-the-fold content. 
+However, be cautious: disabling lazy loading for too many elements can increase initial page load time. This practice should be applied only to critical, above-the-fold content. 
 
 ### Server-Side Rendering (SSR) and lazy loading
 
