--- a/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
+++ b/docs/faststore/docs/seo/optimizing-seo-by-managing-lazy-loading-on-plp-and-pdp.mdx
@@ -12,7 +12,12 @@ This guide explains how to manage lazy loading for custom sections to balance SE
 
 Lazy loading is a technique that defers the loading of non-critical resources, like images or entire page sections, until they're needed. 
 
-In FastStore, `LazyLoadingSection` is a section-level React wrapper that delays rendering and hydration of non-critical blocks until they approach the viewport, and `ViewportObserver` is a small utility (based on the browser's `IntersectionObserver`) that detects when content enters the viewport. Together, they implement lazy loading that is, deferring rendering or hydration and resource fetching until content is near or in view—to reduce the initial page load time, especially on slower devices and networks.
+`LazyLoadingSection` and `ViewportObserver` work together in FastStore to improve initial page load time.
+
+* `LazyLoadingSection`: A React wrapper that delays the rendering of content (e.g., blocks) and hydration of non-critical blocks until they approach the viewport.
+* `LazyLoadingSection` and `ViewportObserver`: a small utility that detects when content is approaching the viewport, triggering the `LazyLoadingSection` to render the content.
+
+These two components work together to implement lazy loading. By deferring the rendering, hydration, and resource fetching until content is near the viewport, they significantly reduce the initial page load time, which is especially helpful for users on slower devices and networks.
 
 ```mermaid
 graph LR
