--- a/docs/faststore/components/atoms/link.mdx
+++ b/docs/faststore/components/atoms/link.mdx
@@ -159,7 +159,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-## Design tokens: Inverse
+### Design tokens: Inverse
 
 <TokenTable>
   <TokenRow
