--- a/docs/faststore/components/atoms/list.mdx
+++ b/docs/faststore/components/atoms/list.mdx
@@ -1,6 +1,6 @@
 ---
 title: "List"
-excerpt: Lists group related content. They can be ordered or unordered.
+excerpt: Lists group-related content. They can be ordered or unordered.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Lists___30f86e23fa668d02441cd1173fc000a9.png
 components:
