--- a/docs/faststore/components/atoms/loader.mdx
+++ b/docs/faststore/components/atoms/loader.mdx
@@ -14,15 +14,12 @@ components:
     <OverviewSection>
       <Loader />
     </OverviewSection>
-    <OverviewSection dark>
-      <Loader variant="light" />
-    </OverviewSection>
   </Tab>
   <Tab>
     ```tsx
     <Loader />
     ``` ```tsx
-    <Loader variant="light" />
+    <Loader />
     ```
   </Tab>
 </Tabs>
