--- a/docs/faststore/components/organisms/empty-state.mdx
+++ b/docs/faststore/components/organisms/empty-state.mdx
@@ -24,6 +24,57 @@ The `EmptyState` can be used to represent an empty state.
           Start Shopping
         </Button>
       </EmptyState>
+    </OverviewSection>
+
+  </Tab>
+  <Tab>
+    ```tsx
+    // An implementation of the `EmptyState` that represents the Cart with no items.
+      <EmptyState
+        title="Your Cart is empty"
+        titleIcon={
+          <Icon name="ShoppingCart" width={56} height={56} weight="thin" />
+        }
+      >
+        <Button variant="secondary">
+          Start Shopping
+        </Button>
+      </EmptyState>
+    ```
+  </Tab>
+</Tabs>
+
+---
+
+## Usage
+
+### Import the component
+
+```tsx
+import { EmptyState } from "@faststore/ui";
+```
+
+### Import styles
+
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import "@faststore/ui/src/components/organisms/EmptyState/styles.scss";
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
+---
+
+## Examples
+
+### Variants
+
+#### Rounded
+
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection containerStyle={{ display: 'grid', gridTemplateColumns: '1fr 1fr' }}>
       <EmptyState
         variant="rounded"
         title="Nothing matches with your search"
@@ -51,69 +102,33 @@ The `EmptyState` can be used to represent an empty state.
   </Tab>
   <Tab>
     ```tsx
-    // An implementation of the `EmptyState` that represents the Cart with no items.
-      <EmptyState
-        title="Your Cart is empty"
-        titleIcon={
-          <Icon name="ShoppingCart" width={56} height={56} weight="thin" />
-        }
-      >
-        <Button variant="secondary">
-          Start Shopping
-        </Button>
-      </EmptyState>
-    ```
-
-    ```tsx
     // An implementation of the `EmptyState` that represents a Gallery with no items.
-       <EmptyState
-        variant="rounded"
-        title="Nothing matches with your search"
-        titleIcon={
-          <Icon name="CircleWavyWarning" width={56} height={56} weight="thin" />
+     <EmptyState
+      variant="rounded"
+      title="Nothing matches your search"
+      titleIcon={
+        <Icon name="CircleWavyWarning" width={56} height={56} weight="thin" />
+      }
+    >
+      <Button
+        variant="secondary"
+        icon={
+          <Icon
+            name="CircleWavyWarning"
+            width={18}
+            height={18}
+            weight="bold"
+          />
         }
+        iconPosition="left"
       >
-        <Button
-          variant="secondary"
-          icon={
-            <Icon
-              name="CircleWavyWarning"
-              width={18}
-              height={18}
-              weight="bold"
-            />
-          }
-          iconPosition="left"
-        >
-          Browse Offers
-        </Button>
-      </EmptyState>
+        Browse Offers
+      </Button>
+    </EmptyState>
     ```
-
   </Tab>
 </Tabs>
 
----
-
-## Usage
-
-### Import the component
-
-```tsx
-import { EmptyState } from "@faststore/ui";
-```
-
-### Import styles
-
-To apply styles, include the following in your stylesheet:
-
-```scss
-@import "@faststore/ui/src/components/organisms/EmptyState/styles.scss";
-```
-
-For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
-
----
 
 ## Design tokens
 
