--- a/docs/faststore/components/organisms/navbar-slider.mdx
+++ b/docs/faststore/components/organisms/navbar-slider.mdx
@@ -89,9 +89,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-navbar-slider-padding" value="var(--fs-spacing-3)" />
 </TokenTable>
 
-## Nested Elements
-
-### Header
+### Design tokens: Header
 
 <TokenTable>
   <TokenRow token="--fs-navbar-slider-header-height" value="5rem" />
@@ -105,7 +103,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Footer
+### Design tokens: Footer
 
 <TokenTable>
   <TokenRow
@@ -118,7 +116,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Logo
+### Design tokens: Logo
 
 <TokenTable>
   <TokenRow token="--fs-navbar-slider-logo-padding" value="0" />
