--- a/docs/guides/vtex-io/GraphQL/integrating-an-app-with-a-graphql-api.mdx
+++ b/docs/guides/vtex-io/GraphQL/integrating-an-app-with-a-graphql-api.mdx
@@ -13,7 +13,7 @@ Once registered with the VTEX IO clients pattern (`IOClients`),  the client beco
 
 ## Before you begin
 
-Make sure you check the technical requirements to follow this guide:
+Ensure you meet the technical requirements to follow this guide:
 
 - The [VTEX IO CLI is installed](https://developers.vtex.com/docs/guides/vtex-io-documentation-vtex-io-cli-install) on your computer.
 - Access to a VTEX store with a [development workspace](https://developers.vtex.com/docs/guides/vtex-io-documentation-creating-a-development-workspace) and the Admin environment.
@@ -32,7 +32,7 @@ git clone https://github.com/vtex-apps/service-example
 
 ### 2. Implementing your custom client
 
-VTEX IO provides `AppGraphQLClient` as a base class for making GraphQL requests between apps. Your custom client should extend this class, specifying the target app (the one exposing the GraphQL API) in the `super` constructor. In this class, you must also define the methods you want to use in your middlewares or resolvers.
+VTEX IO provides `AppGraphQLClient` as a base class for making GraphQL requests between apps. Your custom client should extend this class, specifying the target app (the one exposing the GraphQL API) in the `super` constructor. In this class, you must also define the methods you want to use in your middleware functions or resolvers.
 
 In the following example, we define a client that uses the [Messages app](https://developers.vtex.com/docs/apps/vtex.messages)'s `translate` query for string translations.
 
@@ -62,12 +62,12 @@ export default class TranslationGraphQL extends AppGraphQLClient {
 
 Some details about this implementation:
 
-1. **Target app:** In the client's constructor, define the app you want to query using the format `{vendor}.{app-name}@{version}`. In this example, we use `vtex.messages@1`, specifying only the app's major. You can also specify the exact version with minor and patch values (e.g., `vtex.messages@1.0.0`). In this constructor, you can include other options in the `options` value, such as [authentication tokens in the headers](https://developers.vtex.com/docs/guides/app-authentication-using-auth-tokens) for [authenticated queries](https://developers.vtex.com/docs/guides/graphql-authorization-in-io-apps).
+1. **Target app:** In the client's constructor, define the app you want to query using the format `{vendor}.{app-name}@{version}`. In this example, we use `vtex.messages@1`, specifying only the app's major. You can also specify the exact version with minor and patch values (e.g., `vtex.messages@1.0.0`). In this constructor, you can include other options in the `options` parameter, such as [authentication tokens in the headers](https://developers.vtex.com/docs/guides/app-authentication-using-auth-tokens) for [authenticated queries](https://developers.vtex.com/docs/guides/graphql-authorization-in-io-apps).
 2. **Client functions:** Create functions for each query and mutation you need. This example shows a simplified implementation to call the `translate` query. To make the query, use the function `this.graphql.query` with the following arguments:
     - `query`: Insert the query here in a [template string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) format, surrounded by backticks (`` ` ``), which allows multi-line separation and usage of variables. In this example, we declare the [GraphQL object](https://graphql.org/learn/schema/#object-types-and-fields) `GetTranslation` and use the `$args` variable as [input](https://graphql.org/learn/schema/#input-object-types). Notice that query variables start with the `$` symbol. You must use the same names for the queries and variables as in the schema definition. Here we use the `translate` query and the `TranslateArgs!` type for the variable `$args`. You can find the type names in the app documentation (e.g., [Messages GraphQL API](https://developers.vtex.com/docs/apps/vtex.messages/messages-graphql-api)), using an [Introspection Query](https://graphql.org/learn/introspection/), or, if you have access, in the app's source code.
     - `variables`: Insert the query variables here as an object, where the property keys are the variable names in the query. In this example, `variables.args` is used as the variable `$args` in the query.
 
-> ℹ️ If you want to use mutations, use the function `this.graphql.mutate` and insert the template string in the `mutate` argument.
+> ℹ️ If you want to use mutations, use the function `this.graphql.mutate` and insert the template string as the `mutate` argument's value.
 
 ### 3.  Registering the client
 
@@ -123,7 +123,7 @@ export async function translateMessages(ctx: Context, next: () => Promise<any>) 
 
 ### 5. Defining the service route
 
-We need to define a route, since we are implementing a REST API to access the middleware. Go to the `node/service.json` file, define a public route with the name of the middleware function, and set the path using the format `"/_v/{app-name}/{middleware-name}"`.  For this implementation, we use:
+We need to define a route, as we are implementing a REST API to access the middleware. Go to the `node/service.json` file, define a public route with the name of the middleware function, and set the path using the format `"/_v/{app-name}/{middleware-name}"`.  For this implementation, we use:
 
 ```json node/service.json mark=4:7
 {
@@ -139,7 +139,7 @@ We need to define a route, since we are implementing a REST API to access the mi
 
 ### 6. Relating a route to a middleware
 
-Update the `node/index.ts` file to relate a route to a middleware. The routes section associates the `translateMessages` route with the `translateMessages` middleware function. The `POST` method is related to the `translateMessages` function. We use the `POST` method since we will send the content to be translated in the request body.
+Update the `node/index.ts` file to relate a route to a middleware. The routes section associates the `translateMessages` route with the `translateMessages` middleware function. The `POST` method is mapped to the `translateMessages` function. We use the `POST` method as we will send the content to be translated in the request body.
 
 Therefore, when a `POST` request is made to the previously defined `translateMessages` route, it triggers the `translateMessages` function, which, in turn, executes the `TranslationGraphQL` client's `translate` method.
 
@@ -158,7 +158,7 @@ export default new Service({
 
 ### 7. Add the policies
 
-For your app to have permission to access any external resource, you must declare the related [policies](https://developers.vtex.com/docs/guides/vtex-io-documentation-policies) in your app's `manifest.json` file. In the case of a GraphQL API from another app, it's a role-based policy, so you need to add the app and policy names. You can find the policy name and description in the `policies.json` file from the app's source code.
+For your app to have permission to access any external resource, you must declare the related [policies](https://developers.vtex.com/docs/guides/vtex-io-documentation-policies) in your app's `manifest.json` file. In the case of a GraphQL API from another app, this is a role-based policy, so you need to add the app and policy names. You can find the policy name and description in the `policies.json` file from the app's source code.
 
 Here is the role-based policy from the Messages app for its GraphQL API:
 
@@ -194,7 +194,7 @@ Add the policy to your app using the format `"name": "{vendor}.{app-name}:{polic
 
 ### 8. Link your app
 
-To test your app, [link](https://developers.vtex.com/docs/guides/vtex-io-documentation-linking-an-app) it to the VTEX platform to run and accept requests.
+To test your app, [link](https://developers.vtex.com/docs/guides/vtex-io-documentation-linking-an-app) it to the VTEX platform to enable it to run and accept requests.
 
 Open a terminal and switch to a [development workspace](https://developers.vtex.com/docs/guides/vtex-io-documentation-creating-a-development-workspace). Then, use the `vtex link` command.
 
