--- a/docs/guides/vtex-io/GraphQL/integrating-an-app-with-a-graphql-api.mdx
+++ b/docs/guides/vtex-io/GraphQL/integrating-an-app-with-a-graphql-api.mdx
@@ -62,7 +62,7 @@ export default class TranslationGraphQL extends AppGraphQLClient {
 
 Some details about this implementation:
 
-1. **Target app:** In the client's constructor, define the app you want to query using the format `{vendor}.{app-name}@{version}`. In this example, we use `vtex.messages@1`, specifying only the app's major. You can also specify the exact version with minor and patch values (e.g., `vtex.messages@1.0.0`). In this constructor, you can include other options in the `options` parameter, such as [authentication tokens in the headers](https://developers.vtex.com/docs/guides/app-authentication-using-auth-tokens) for [authenticated queries](https://developers.vtex.com/docs/guides/graphql-authorization-in-io-apps).
+1. **Target app:** In the client's constructor, define the app you want to query using the format `{vendor}.{app-name}@{version}`. In this example, we use `vtex.messages@1`, specifying only the app's major version. You can also specify the exact version with minor and patch values (e.g., `vtex.messages@1.0.0`). In this constructor, you can include other options in the `options` parameter, such as [authentication tokens in the headers](https://developers.vtex.com/docs/guides/app-authentication-using-auth-tokens) for [authenticated queries](https://developers.vtex.com/docs/guides/graphql-authorization-in-io-apps).
 2. **Client functions:** Create functions for each query and mutation you need. This example shows a simplified implementation to call the `translate` query. To make the query, use the function `this.graphql.query` with the following arguments:
     - `query`: Insert the query here in a [template string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) format, surrounded by backticks (`` ` ``), which allows multi-line separation and usage of variables. In this example, we declare the [GraphQL object](https://graphql.org/learn/schema/#object-types-and-fields) `GetTranslation` and use the `$args` variable as [input](https://graphql.org/learn/schema/#input-object-types). Notice that query variables start with the `$` symbol. You must use the same names for the queries and variables as in the schema definition. Here we use the `translate` query and the `TranslateArgs!` type for the variable `$args`. You can find the type names in the app documentation (e.g., [Messages GraphQL API](https://developers.vtex.com/docs/apps/vtex.messages/messages-graphql-api)), using an [Introspection Query](https://graphql.org/learn/introspection/), or, if you have access, in the app's source code.
     - `variables`: Insert the query variables here as an object, where the property keys are the variable names in the query. In this example, `variables.args` is used as the variable `$args` in the query.
@@ -158,7 +158,7 @@ export default new Service({
 
 ### 7. Add the policies
 
-For your app to have permission to access any external resource, you must declare the related [policies](https://developers.vtex.com/docs/guides/vtex-io-documentation-policies) in your app's `manifest.json` file. In the case of a GraphQL API from another app, this is a role-based policy, so you need to add the app and policy names. You can find the policy name and description in the `policies.json` file from the app's source code.
+For your app to have permission to access any external resource, you must declare the related [policies](https://developers.vtex.com/docs/guides/vtex-io-documentation-policies) in your app's `manifest.json` file. In the case of a GraphQL API from another app, this is a role-based policy, so you need to add the app name and policy name. You can find the policy name and description in the `policies.json` file from the app's source code.
 
 Here is the role-based policy from the Messages app for its GraphQL API:
 
