--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Enabling refresh token on FastStore"
+excerpt: "Automatically refresh user sessions without re-login by enabling the refresh token flow in your FastStore project."
 createdAt: "2025-08-15T14:00:00.000Z"
 updatedAt: "2025-09-17T09:00:00.000Z"
 ---
