Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Enabling refresh token on FastStore"
-excerpt: "Automatically refresh user sessions without re-login by enabling the refresh token flow in your FastStore project."
+excerpt: "Automatically refresh user sessions without re-logging in by enabling the refresh token flow in your FastStore project."
 createdAt: "2025-08-15T14:00:00.000Z"
 updatedAt: "2025-09-17T09:00:00.000Z"
 ---
@@ -8,7 +8,7 @@ updatedAt: "2025-09-17T09:00:00.000Z"
 [Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
 
 The [FastStore SDK Session](https://developers.vtex.com/docs/guides/faststore/sdk-overview#session) includes built-in support for the [refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) flow. It automatically manages token renewal, session management, and error handling.
-As a FastStore user, you only need to enable the refresh token in your project configuration. The SDK will manage the process automatically, without requiring custom flow implementation.
+As a FastStore user, you only need to enable the refresh token in your project configuration. The SDK will manage the process automatically, without requiring you to implement a custom flow.
 
 In this guide, you'll learn how to enable the refresh token in a FastStore store.
 
