--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -9,7 +9,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/ProductCard)
 
-The `ProductCard` displays summarized information about a product. They usually present a call-to-action button, as well as the product's name, price, and image.The `ProductCard` is a compound of the following:
+The `ProductCard` displays summarized information about a product. It usually present a call-to-action button, as well as the product's name, price, and image. The `ProductCard` is composed of the following components:
 
 - `ProductCardImage`: wraps the product's image.
 - `ProductCardContent`: wraps the content's details.
@@ -726,7 +726,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   />
 </TokenTable>
 
-### Desing tokens: Out of Stock
+### Design tokens: Out of Stock
 
 <TokenTable>
   <TokenRow
@@ -742,7 +742,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   <TokenRow token="--fs-product-card-out-of-stock-img-opacity" value=".5" />
 </TokenTable>
 
-### Desing tokens: Bordered
+### Design tokens: Bordered
 
 <TokenTable>
   <TokenRow
@@ -804,7 +804,7 @@ You can target and override `ProductCard` styles using the following data attrib
 
 ## Props
 
-All product card related components support all attributes also supported by their respective HTML tags. Besides those attributes, the following props are also supported:
+All product card-related components support all attributes also supported by their respective HTML tags. Besides these attributes, the following props are also supported:
 
 ### ProductCard
 
