--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -9,10 +9,10 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/ProductCard)
 
-The `ProductCard` displays summarized information about a product. It usually present a call-to-action button, as well as the product's name, price, and image. The `ProductCard` is composed of the following components:
+The `ProductCard` displays summarized information about a product. It usually presents a call-to-action button, as well as the product's name, price, and image. The `ProductCard` is composed of the following components:
 
 - `ProductCardImage`: wraps the product's image.
-- `ProductCardContent`: wraps the content's details.
+- `ProductCardContent`: wraps the content details.
 
 Use the `ProductCard` to:
 
@@ -804,7 +804,7 @@ You can target and override `ProductCard` styles using the following data attrib
 
 ## Props
 
-All product card-related components support all attributes also supported by their respective HTML tags. Besides these attributes, the following props are also supported:
+All product card-related components support all attributes supported by their respective HTML tags. Besides these attributes, the following props are also supported:
 
 ### ProductCard
 
