Review design tokens

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -658,9 +658,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Image
+### Design tokens: Image
 
 <TokenTable>
   <TokenRow
@@ -670,7 +668,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   <TokenRow token="--fs-product-card-img-scale-hover" value="1" />
 </TokenTable>
 
-#### Title
+### Design tokens: Title
 
 <TokenTable>
   <TokenRow
@@ -692,7 +690,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   />
 </TokenTable>
 
-#### Price
+### Design tokens: Price
 
 <TokenTable>
   <TokenRow token="--fs-product-card-price-gap" value="var(--fs-spacing-1)" />
@@ -708,7 +706,7 @@ To replicate this style, add `outOfStock` prop on both `ProductCard` and `Produc
   />
 </TokenTable>
 
-#### Tax Label
+### Design tokens: Tax Label
 
 <TokenTable>
   <TokenRow
