Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -814,7 +814,7 @@ You can target and override `ProductCard` styles using the following data attrib
 
 ## Props
 
-All product card-related components support all attributes supported by their respective HTML tags. Besides these attributes, the following props are also supported:
+All product card-related components support the attributes of their respective HTML tags. Besides these attributes, the following props are also supported:
 
 ### ProductCard
 
