Fix Out of Stock

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -381,7 +381,7 @@ Prefer using `buyButton` or `discountBadge`, never both.
 
 ### Out of Stock
 
-To replicate this style, add `outOfStock` the prop to both `ProductCard` and `ProductCardContent`.
+To replicate this style, add the prop to both `ProductCard` and `ProductCardContent`.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
