--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -842,7 +842,7 @@ All product card-related components support the attributes of their respective H
   <SectionItem
     title="ProductShelf"
     description="
-Displays a list of products to be used as a section on the store."
+Displays a list of products to be used as a section of the store."
     actionPath="/docs/guides/faststore/organisms-product-shelf"
   >
     <ProductShelfUsage items={6} />
